Monolithic commit which gets a basic instance of Vue running with components passing data to each other. BOOYAH!

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,14 @@
         <![endif]-->
         
         <!-- BEGIN BODY -->
-        
+       <div id="vue">
+           <App></App>
+       </div>
+
+
+
+
+
 
         <!-- END BODY -->
     </body>
